--- a/minil.toml
+++ b/minil.toml
@@ -1,4 +1,4 @@
 name = "Data-Gimei"
-# badges = ["travis-ci.com"]
+badges = ['github-actions/test']
 module_maker="ModuleBuildTiny"
 static_install = "auto"
