--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,4 +30,8 @@ jobs:
       # Runs a single command using the runners shell
       - run: perl -V
       - run: cpanm --installdeps .
-      - run: minil test
+      # - run: minil test
+      - run: |
+          perl Build.PL
+          ./Build build
+          ./Build test
