--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - run: perl -V
-      - run: cpanm --with-configure --with-test --installdeps .
+      - run: cpanm -n --with-configure --with-test --installdeps .
       # - run: minil test
       - run: |
           perl Build.PL
