--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,12 @@
 name: test
 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: [ main ]
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
     runs-on: ${{ matrix.os }}
@@ -18,20 +14,16 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
         perl: ["5.34", "5.32", "5.30"]
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: ${{ matrix.perl }}
-
-      # Runs a single command using the runners shell
-      - run: perl -V
+      - name: Install dependencies
       - run: cpanm -n --with-configure --with-test --installdeps .
-      # - run: minil test
+      - name: Build
       - run: |
           perl Build.PL
           ./Build build
-          ./Build test
+      - name: Run test
+      - run: ./Build test
