--- a/t/names.yml
+++ b/t/names.yml
@@ -1,5 +1,5 @@
 first_name:
   male:
-    - ['愛斗', 'あいと', 'アイト']
+    - ['愛斗', 'あいと', 'アイト', 'aito']
 last_name:
-  - ['佐藤', 'さとう', 'サトウ']
+  - ['佐藤', 'さとう', 'サトウ', 'sato']
