--- a/t/names.yml
+++ b/t/names.yml
@@ -1,5 +1,5 @@
 first_name:
   male:
-    - ['愛斗', 'あいと', 'アイト', 'john']
+    - ['愛斗', 'あいと', 'タロウ', 'john']
 last_name:
-  - ['佐藤', 'さとう', 'サトウ', 'smith']
+  - ['佐藤', 'さとう', 'ヤマダ', 'smith']
