--- a/minil.toml
+++ b/minil.toml
@@ -1,4 +1,6 @@
 name = "Data-Gimei"
 badges = ['github-actions/test']
+authority="cpan:YOUPONG"
+
 module_maker="ModuleBuildTiny"
 static_install = "auto"
