--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,13 +13,13 @@ jobs:
     strategy:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
-        perl: ["5.42", "5.36", "5.10"]
+        perl: ["5.42", "5.40", "5.10"]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
       - uses: shogo82148/actions-setup-perl@v1
         with:
           perl-version: ${{ matrix.perl }}
-      - run: cpanm -n --with-configure --installdeps .
+      - run: cpanm -n --with-configure --with-test --installdeps .
       - run: |
           perl Build.PL
           ./Build build
