--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         include:
           - os: windows-latest
             perl: "5.42"
-            distribution: [ strawberry, '' ]
+            distribution: strawberry
 
     steps:
       - uses: actions/checkout@v6
