--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         exclude:
           - os: ubuntu-latest
             distribution: strawberry
-          - os: mac-latest
+          - os: macos-latest
             distribution: strawberry
 
     steps:
