--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ windows-latest, macos-latest, ubuntu-latest ]
-        perl: [ "5.42", "5.40", "5.10" ]
+        perl: [ "5.42", "5.40", "5.36", "5.10" ]
         distribution: [ strawberry, '' ]
         exclude:
           - os: ubuntu-latest
