--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,5 +38,5 @@ jobs:
 
       - run: |
           carton exec perl Build.PL
-          carton exec ./Build build
-          carton exec ./Build test
+          carton exec perl Build build
+          carton exec perl Build test
