--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,8 @@ jobs:
 
       - name: Setup Perl
         uses: shogo82148/actions-setup-perl@v1
+        env:
+          ACTIONS_STEP_DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG }}
         with:
           perl-version: ${{ matrix.perl }}
           distribution: ${{ matrix.distribution }}
