--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
 
       - run: |
           carton exec perl Build.PL
-          perl Build build
+          perl ./Build build
           carton exec perl Build test
         env:
           PERL5LIB: local/lib/perl5
